--- a/css/order.css
+++ b/css/order.css
@@ -2,41 +2,39 @@ body {
   background-image: url("../images/bac.svg");
   background-repeat: no-repeat;
   background-color:hsl(225, 100%, 94%);
-  margin-top:50px;
+  display:flex;
+  flex-direction:column-reverse;
+  align-items: center;
+  justify-content:center;
+  min-height:100vh;
 }
 @font-face {
   font-family:RedHatDisplay;
   src: url(../font/RedHatDisplay/RedHatDisplay-VariableFont_wght.ttf);
 }
-.main{
-  {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  @media (min-width: 600px) {
-    main {
-      flex-wrap: nowrap;
-    }
-  }
-}
-.dance img
-  {
-    display:block;
-    margin-left: auto; 
-    margin-right: auto;
-    border-radius:30px 30px 0px 0px;
-    width:500px;
-  }
-.dance{
-  display:block;
-  margin-left:auto;
-  margin-right:auto;
-  background-color: hsl(0, 0%, 100%);
-  border-radius: 30px 30px 30px 30px;
-  height:700px;
-  width:500px;  
+main{
+  flex-direction:column;
+  align-items: center;
+  justify-content:center;
+  margin:5em;
  }
+
+.dance{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  background-color: hsl(0, 0%, 100%);
+  border-radius:5%;
+  width:100%;  
+ }
+ .dance img
+  {
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    border-radius:5% 5% 0% 0%;
+    max-width:100%; 
+  }
  .text_class{
    display: block;
    margin-left:auto;
@@ -54,21 +52,15 @@ body {
     font-weight:500px;
     color: hsl(220, 15%, 55%); 
  }
- /*.container
- {
  
- align-items: left;
- justify-content: left;
-  }*/
-
- .container{
+.container{
    display: block;
-   margin-right:auto;
-   margin-left:auto;
+   flex-direction: column;
+   justify-content: center;
    background-color:hsl(225, 100%, 98%);
-   border-radius:20px;
-   width: 350px;
-   height:100px;
+   border-radius:10%;
+   width:100%;
+   max-height:100px;
    
  }
 .container img{
@@ -102,27 +94,29 @@ body {
    color: hsl(220, 15%, 55%);
   }
   .change{
-    display:block;
+    display:flex;
+    flex-direction: column;
+    text-decoration:none;
+    color:rgba(106, 17, 250, 0.897);
     text-align:end right;
     transform: translate(70px,-900%);
     
   }
   a.cursor{
+    text-decoration:none;
     font-size: 14px;
    font-weight:20px;
   }
 .button{
   display:block;
-  margin-left:auto;
-  margin-right:auto;
-  margin-top:40px;
+  margin-top: 40px;
   border-radius:10px 10px 10px 10px;
   box-shadow:0 15px 20px rgba(120, 102, 204, 0.671);
   background-color:rgba(106, 17, 250, 0.897);
   width: 350px;
   height:40px;
   color: white;
-  text-align: center;
+  text-align:center;
   font-size: 16px;
   cursor: pointer;
   }
@@ -130,7 +124,7 @@ body {
   display:block;
   margin-left:auto;
   margin-right:auto;
-  padding-top: 10px;
+  padding: 10em;
   text-align: center;
   font-family:RedHatDisplay;
   font-weight: bold;
